Port to Forge 1.20.1: Replaced Fabric dependencies with Forge equivalents and disabled Mixins/Iris