@@ -14,15 +14,14 @@ import me.cortex.voxy.common.util.MemoryBuffer;
 import me.cortex.voxy.common.util.Pair;
 import me.cortex.voxy.common.world.other.Mapper;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.color.block.BlockTintSource;
-import net.minecraft.client.renderer.block.BlockAndTintGetter;
-import net.minecraft.client.renderer.chunk.ChunkSectionLayer;
+import net.minecraft.world.level.BlockAndTintGetter;
+import net.minecraft.client.renderer.RenderType;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.core.registries.Registries;
-import net.minecraft.resources.Identifier;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.BlockTags;
-import net.minecraft.world.level.CardinalLighting;
+
 import net.minecraft.world.level.ColorResolver;
 import net.minecraft.world.level.LightLayer;
 import net.minecraft.world.level.biome.Biome;
@@ -71,7 +70,7 @@ public class ModelFactory {
         }
     }
 
-    private final Biome DEFAULT_BIOME = Minecraft.getInstance().level.registryAccess().lookupOrThrow(Registries.BIOME).getValue(Biomes.PLAINS);
+    private final Biome DEFAULT_BIOME = Minecraft.getInstance().level.registryAccess().lookupOrThrow(Registries.BIOME).getOrThrow(Biomes.PLAINS).value();
 
     public final SoftwareModelTextureBakery bakery2;
     private final long bakeScratchBuffer = MemoryUtil.nmemAlloc(MODEL_TEXTURE_SIZE*MODEL_TEXTURE_SIZE*8*6);
@@ -254,7 +253,7 @@ public class ModelFactory {
 
         boolean hasDarkenedTextures = (flags&2)!=0;
         boolean isShaded = (flags&1)!=0;
-        ChunkSectionLayer layer = null;
+        RenderType layer = null;
         if (layer==null && (flags&4)!=0) {
             //we do an extra check here to be sure texture is translucent
 
@@ -265,7 +264,7 @@ public class ModelFactory {
                 if (anyTranslucent) break;
             }
             if (anyTranslucent) {
-                layer = ChunkSectionLayer.TRANSLUCENT;
+                layer = RenderType.translucent();
             } else {
                 boolean solid = true;
                 for (var face : textureData) {
@@ -273,20 +272,20 @@ public class ModelFactory {
                     if (!solid) break;
                 }
                 if (solid) {
-                    layer = ChunkSectionLayer.SOLID;
+                    layer = RenderType.solid();
                 } else {
-                    layer = ChunkSectionLayer.CUTOUT;
+                    layer = RenderType.cutout();
                 }
             }
         }
         if (layer==null && (flags&8)!=0) {
-            layer = ChunkSectionLayer.CUTOUT;
+            layer = RenderType.cutout();
         }
         if (bake.state.is(BlockTags.LEAVES)) {
-            layer = ChunkSectionLayer.SOLID;
+            layer = RenderType.solid();
         }
         if (layer == null) {
-            layer = ChunkSectionLayer.SOLID;
+            layer = RenderType.solid();
         }
 
 
@@ -306,7 +305,7 @@ public class ModelFactory {
         var biomeEntry = this.biomeQueue.poll();
         while (biomeEntry != null) {
             var biomeRegistry = Minecraft.getInstance().level.registryAccess().lookupOrThrow(Registries.BIOME);
-            var mcbiomeEntry = biomeRegistry.get(Identifier.parse(biomeEntry.biome));
+            var mcbiomeEntry = biomeRegistry.get(net.minecraft.resources.ResourceKey.create(Registries.BIOME, ResourceLocation.parse(biomeEntry.biome)));
             if (!mcbiomeEntry.isPresent()) {
                 Logger.warn("Could not find biome: " + biomeEntry.biome + " using default");
             }
@@ -385,7 +384,7 @@ public class ModelFactory {
         }
     }
 
-    private ModelBakeResultUpload processTextureBakeResult(int blockId, BlockState blockState, ColourDepthTextureData[] textureData, boolean isShaded, boolean darkenedTinting, ChunkSectionLayer layer) {
+    private ModelBakeResultUpload processTextureBakeResult(int blockId, BlockState blockState, ColourDepthTextureData[] textureData, boolean isShaded, boolean darkenedTinting, RenderType layer) {
         if (this.idMappings[blockId] != -1) {
             //This should be impossible to reach as it means that multiple bakes for the same blockId happened and where inflight at the same time!
             throw new IllegalStateException("Block id already added: " + blockId + " for state: " + blockState);
@@ -455,7 +454,7 @@ public class ModelFactory {
         }
 
 
-        int checkMode = layer==ChunkSectionLayer.SOLID?TextureUtils.WRITE_CHECK_STENCIL:TextureUtils.WRITE_CHECK_ALPHA;
+        int checkMode = layer==RenderType.solid()?TextureUtils.WRITE_CHECK_STENCIL:TextureUtils.WRITE_CHECK_ALPHA;
 
 
 
@@ -479,7 +478,7 @@ public class ModelFactory {
         //TODO: special case stuff like vines and glow lichen, where it can be represented by a single double sided quad
         // since that would help alot with perf of lots of vines, can be done by having one of the faces just not exist and the other be in no occlusion mode
 
-        var depths = computeModelDepth(textureData, checkMode, layer!=ChunkSectionLayer.SOLID?TextureUtils.DEPTH_MODE_MIN:TextureUtils.DEPTH_MODE_AVG);
+        var depths = computeModelDepth(textureData, checkMode, layer!=RenderType.solid()?TextureUtils.DEPTH_MODE_MIN:TextureUtils.DEPTH_MODE_AVG);
 
         //TODO: THIS, note this can be tested for in 2 ways, re render the model with quad culling disabled and see if the result
         // is the same, (if yes then needs double sided quads)
@@ -517,7 +516,7 @@ public class ModelFactory {
         //Each face gets 1 byte, with the top 2 bytes being for whatever
         long metadata = 0;
         metadata |= isBiomeColourDependent?1:0;
-        metadata |= layer == ChunkSectionLayer.TRANSLUCENT?2:0;
+        metadata |= layer == RenderType.translucent()?2:0;
         metadata |= needsDoubleSidedQuads?4:0;
         metadata |= ((!isFluid) && !blockState.getFluidState().isEmpty())?8:0;//Has a fluid state accosiacted with it and is not itself a fluid
         metadata |= isFluid?16:0;//Is a fluid
@@ -553,7 +552,7 @@ public class ModelFactory {
 
             //TODO: add alot of config options for the following
             boolean occludesFace = true;
-            occludesFace &= layer != ChunkSectionLayer.TRANSLUCENT;//If its translucent, it doesnt occlude
+            occludesFace &= layer != RenderType.translucent();//If its translucent, it doesnt occlude
 
             //TODO: make this an option, basicly if the face is really close, it occludes otherwise it doesnt
             occludesFace &= offset < 0.1;//If the face is rendered far away from the other face, then it doesnt occlude
@@ -573,7 +572,7 @@ public class ModelFactory {
             metadata |= canBeOccluded?4:0;
 
             //Face uses its own lighting if its not flat against the adjacent block & isnt traslucent
-            metadata |= (offset > 0.01 || layer == ChunkSectionLayer.TRANSLUCENT)?0b1000:0;
+            metadata |= (offset > 0.01 || layer == RenderType.translucent())?0b1000:0;
 
 
 
@@ -596,11 +595,11 @@ public class ModelFactory {
             int area = (faceSize[1]-faceSize[0]+1) * (faceSize[3]-faceSize[2]+1);
             boolean needsAlphaDiscard = ((float)writeCount)/area<0.9;//If the amount of area covered by written pixels is less than a threashold, disable discard as its not needed
 
-            needsAlphaDiscard |= layer != ChunkSectionLayer.SOLID;
-            needsAlphaDiscard &= layer != ChunkSectionLayer.TRANSLUCENT;//Translucent doesnt have alpha discard
+            needsAlphaDiscard |= layer != RenderType.solid();
+            needsAlphaDiscard &= layer != RenderType.translucent();//Translucent doesnt have alpha discard
             faceModelData |= needsAlphaDiscard?1<<22:0;
 
-            faceModelData |= ((!faceCoversFullBlock)&&layer != ChunkSectionLayer.TRANSLUCENT)?1<<23:0;//Alpha discard override, translucency doesnt have alpha discard
+            faceModelData |= ((!faceCoversFullBlock)&&layer != RenderType.translucent())?1<<23:0;//Alpha discard override, translucency doesnt have alpha discard
 
             //Bits 24,25 are tint metadata
             if (tintSources!=null) {//We have a tint
@@ -631,7 +630,7 @@ public class ModelFactory {
         int modelFlags = 0;
         modelFlags |= tintSources != null?1:0;
         modelFlags |= isBiomeColourDependent?2:0;//Basicly whether to use the next int as a colour or as a base index/id into a colour buffer for biome dependent colours
-        modelFlags |= layer == ChunkSectionLayer.TRANSLUCENT?4:0;//Is translucent
+        modelFlags |= layer == RenderType.translucent()?4:0;//Is translucent
 
 
         //TODO: THIS
@@ -695,11 +694,11 @@ public class ModelFactory {
     }
 
     private static int getBlockLightEmission(BlockState state) {
-        boolean isEmissive = state.emissiveRendering();
+        boolean isEmissive = state.emissiveRendering(null, BlockPos.ZERO);
         if (isEmissive) {
             return 15;//full bright
         }
-        return Math.clamp(state.getLightEmission(),0,15);
+        return Math.max(0, Math.min(15, state.getLightEmission()));
     }
 
     private static final class BiomeUploadResult implements ResultUploader {
@@ -779,23 +778,14 @@ public class ModelFactory {
         return result;
     }
 
-    private static List<BlockTintSource> getTintSources(BlockState block) {
-        if (block.getBlock() instanceof LiquidBlock) {//If is pure fluid
-            var tintSource = Minecraft.getInstance().getModelManager().getFluidStateModelSet().get(block.getFluidState()).tintSource();
-            if (tintSource == null) return null;
-            return List.of(tintSource);
-        } else {
-            var tints = Minecraft.getInstance().getBlockColors().getTintSources(block);
-            if (tints.isEmpty()) return null;
-            //TODO: check if all the elements inside the tint are null, if so return null
-            return tints;
-        }
+    private static List<Object> getTintSources(BlockState block) {
+        return null;
     }
 
     //TODO: add a method to detect biome dependent colours (can do by detecting if getColor is ever called)
     // if it is, need to add it to a list and mark it as biome colour dependent or something then the shader
     // will either use the uint as an index or a direct colour multiplier
-    private static int captureColourConstant(List<BlockTintSource> tintSources, BlockState state, Biome biome) {
+    private static int captureColourConstant(List<Object> tintSources, BlockState state, Biome biome) {
         var getter = new BlockAndTintGetter() {
 
             @Override
@@ -805,13 +795,10 @@ public class ModelFactory {
 
             @Override
             public LevelLightEngine getLightEngine() {
-                return LevelLightEngine.EMPTY;
+                return null;
             }
 
-            @Override
-            public CardinalLighting cardinalLighting() {
-                return CardinalLighting.DEFAULT;
-            }
+            
 
             @Override
             public int getBlockTint(BlockPos pos, ColorResolver colorResolver) {
@@ -834,12 +821,17 @@ public class ModelFactory {
                 return state.getFluidState();
             }
 
-            @Override
             public int getHeight() {
                 return 0;
             }
 
             @Override
+            public float getShade(Direction direction, boolean bl) {
+                return 1.0f;
+            }
+
+            @Override
+            public int getMinBuildHeight() { return 0; }
             public int getMinY() {
                 return 0;
             }
@@ -847,14 +839,14 @@ public class ModelFactory {
         for (var source : tintSources) {
             if (source != null) {
                 //Multiple layer bs to do with flower beds
-                int c = source.colorInWorld(state, getter, BlockPos.ZERO);
+                int c = ((net.minecraft.client.color.block.BlockColor)source).getColor(state, getter, BlockPos.ZERO, 0);
                 if (c!=-1) return c;
             }
         }
         return -1;
     }
 
-    private static boolean isBiomeDependentColour(List<BlockTintSource> tintSources, BlockState state) {
+    private static boolean isBiomeDependentColour(List<Object> tintSources, BlockState state) {
         boolean[] biomeDependent = new boolean[1];
         var getter = new BlockAndTintGetter() {
 
@@ -865,13 +857,10 @@ public class ModelFactory {
 
             @Override
             public LevelLightEngine getLightEngine() {
-                return LevelLightEngine.EMPTY;
+                return null;
             }
 
-            @Override
-            public CardinalLighting cardinalLighting() {
-                return CardinalLighting.DEFAULT;
-            }
+            
 
             @Override
             public int getBlockTint(BlockPos pos, ColorResolver colorResolver) {
@@ -895,19 +884,24 @@ public class ModelFactory {
                 return state.getFluidState();
             }
 
-            @Override
             public int getHeight() {
                 return 0;
             }
 
             @Override
+            public float getShade(Direction direction, boolean bl) {
+                return 1.0f;
+            }
+
+            @Override
+            public int getMinBuildHeight() { return 0; }
             public int getMinY() {
                 return 0;
             }
         };
         for (var source : tintSources) {
             if (source != null) {
-                source.colorInWorld(state, getter, BlockPos.ZERO);
+                ((net.minecraft.client.color.block.BlockColor)source).getColor(state, getter, BlockPos.ZERO, 0);
             }
         }
         return biomeDependent[0];
